--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -78,20 +78,20 @@ body {
   align-items: center;
 }
 
-ul,
-li {
+.Ul,
+.Li {
   margin: 0;
   padding: 0;
 }
 
-ul {
+.Ul {
   padding: 15px;
   position: absolute;
   top: 60px;
   width: auto;
 }
 
-li {
+.Li {
   list-style: none;
   margin-bottom: 20px;
   display: flex;
@@ -112,7 +112,7 @@ li {
   top: 0;
   left: 0;
   bottom: 0;
-  width: 100vh;
+  width: 100vw;
 }
 @keyframes bounce {
   0%,
