--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -117,6 +117,18 @@ body {
 
 /* What we do */
 
+@layer utilities {
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+      display: none;
+  }
+ /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+      -ms-overflow-style: none;  /* IE and Edge */
+      scrollbar-width: none;  /* Firefox */
+}
+}
+
  .box:hover {
   -webkit-transform: translateY(-5px);
   transform: translateY(-5px);
