--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -120,39 +120,62 @@ body {
 @layer utilities {
   /* Hide scrollbar for Chrome, Safari and Opera */
   .no-scrollbar::-webkit-scrollbar {
-      display: none;
+    display: none;
   }
- /* Hide scrollbar for IE, Edge and Firefox */
+  /* Hide scrollbar for IE, Edge and Firefox */
   .no-scrollbar {
-      -ms-overflow-style: none;  /* IE and Edge */
-      scrollbar-width: none;  /* Firefox */
-}
-}
-
- .box:hover {
-  -webkit-transform: translateY(-5px);
-  transform: translateY(-5px);
-  background: #007bff;
-  /* background: linear-gradient(to right,#74ebd5,#99f2c8 ); */
-
-  color: white;
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
 }
 
-
-@keyframes fadeInUp {
+@keyframes moveLeft {
   0% {
-      opacity: 0;
-      transform: translate3d(0,100%,0)
   }
 
-  to {
-      opacity: 1;
-      transform: none
+  100% {
+    transform: translateX(-10);
   }
 }
 
-.fadeInUp {
-  animation-name: fadeInUp
+.moveLeft {
+  animation: moveLeft 400ms ease-in;
+  animation-fill-mode: forwards;
+}
+
+@keyframes moveRight {
+  0% {
+  }
+
+  100% {
+    transform: translateX(10);
+  }
+}
+
+.moveRight {
+  animation: moveRight 400ms ease-in;
+  animation-fill-mode: forwards;
+}
+
+@keyframes fadeInOut {
+  0% {
+    scale: 0;
+  }
+
+  100% {
+    width: fit-content;
+    scale: 1;
+  }
+}
+
+.fadeInOut {
+  animation: fadeInOut 400ms ease-in-out;
+  animation-fill-mode: forwards;
+}
+
+.title {
+  width: fit-content;
+  font-size: xx-large;
 }
 
 @keyframes bounce {
@@ -188,6 +211,6 @@ body {
 }
 
 .vertical-timeline-element-icon {
-    display: grid;
-    place-items: center;
+  display: grid;
+  place-items: center;
 }
