--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,20 +49,10 @@ body {
 
 /* Sidebar */
 
-.background {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  width: 100vw;
-  background: #00000075;
-  z-index: 1000;
-}
-
 #three-lines {
   filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(220deg)
     brightness(101%) contrast(101%);
-    z-index: 2000;
+  z-index: 2000;
 }
 
 #side-button {
@@ -84,47 +74,6 @@ body {
   align-items: center;
   z-index: 2000;
 }
-
-.Ul,
-.Li {
-  margin: 0;
-  padding: 0;
-}
-
-.Ul {
-  padding: 15px;
-  position: absolute;
-  top: 60px;
-  width: auto;
-}
-
-.Li {
-  list-style: none;
-  margin-bottom: 20px;
-  display: flex;
-  align-items: center;
-  cursor: pointer;
-}
-
-.text-placeholder {
-  background-image: linear-gradient(90deg, #ea4134, #4386f1, #fbba0a, #0d9c5a);
-  background-clip: text;
-  height: 20px;
-  flex: 1;
-  color: transparent;
-  z-index: 1000;
-}
-
-#Nav {
-  z-index: 1000;
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  width: 100vw;
-}
-
-/* What we do */
 
 @layer utilities {
   /* Hide scrollbar for Chrome, Safari and Opera */
@@ -153,7 +102,6 @@ body {
 }
 
 @keyframes moveRight {
-
   to {
     transform: translateX(10);
   }
@@ -168,7 +116,6 @@ body {
 }
 
 @keyframes fadeInOut {
-
   to {
     visibility: visible;
     width: fit-content;
@@ -225,4 +172,22 @@ body {
 .vertical-timeline-element-icon {
   display: grid;
   place-items: center;
+}
+
+.gradient-text {
+  background: linear-gradient(
+    to right,
+    #e84335,
+    /* Red */ #d32f2f,
+    /* Darker Red */ #4385f5,
+    /* Blue */ #76c043,
+    /* Green */ #004ba0,
+    /* Darker Blue */ #109e59,
+    /* Dark Green */ #007ac1 /* Lighter Blue */
+  );
+  background-size: 300% 300%;
+  background-clip: text;
+  color: transparent; /* This is needed to see the gradient in the text */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
