--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -286,20 +286,19 @@
   margin: 20px 0;
 }
 
-.feature-item:nth-child(even) {
-  flex-direction: row-reverse;
-}
+
+
 
 .feature-item-left {
   width: 47.5%;
   height: 100%;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
   padding: 0 8vw;
-  border-radius: 5px;
+  border-radius: 20px;
   padding-right: 0;
-  overflow: hidden;
+  flex-direction: row;
 }
 
 .feature-item-right {
@@ -309,6 +308,10 @@
   flex-direction: column;
   justify-content: center;
   padding: 0 8vw;
+}
+.feature-item:nth-child(even)   {
+  flex-direction: row-reverse;
+
 }
 
 @media only screen and (max-width: 600px) {
