--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -214,11 +214,7 @@
   }
 }
 /* css for about us */
-/* :root {
-    --tanText : #434343;
-    --darkGrey: #878787;
-    --darkText : #2a2b2b;
-} */
+
 
 .h2 {
   font-family: Google Sans Medium;
@@ -265,13 +261,21 @@
 .ta-center {
   text-align: center;
 }
+.featurecontainer{
+  width:100% ;
+  overflow-x: hidden;
+  overflow-y: auto;
+ margin-left: -1% ;
+}
 
 .features {
   margin: 40px auto;
+  margin-top: 6%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  width: 100%;
+  width: 101%;
+
 }
 
 .feature-item {
@@ -314,6 +318,15 @@
 }
 
 @media only screen and (max-width: 600px) {
+  .featurecontainer{
+ width: 100vw;
+ overflow-x: hidden;
+  }
+  .features {
+  margin: 40px auto;
+  margin-top: 6%;
+  width: 100vw;
+}
   .feature-item {
     flex-direction: column;
     height: auto;
@@ -324,13 +337,15 @@
     width: 100%;
     height: 250px;
     padding: 0 10px;
+    margin-top: 10%;
   }
 
   .feature-item-right {
     width: 100%;
     height: auto;
     padding: 0 10px;
-    margin-top: 20px;
+    margin-top: 10%;
+    margin-bottom: 5%;
   }
 
   .feature-item-right .h2 {
