--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -300,6 +300,7 @@
   flex-direction: row;
 }
 
+
 .feature-item-right {
   width: 52.5%;
   height: 100%;
@@ -313,17 +314,21 @@
 
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 738px) {
   .feature-item {
     flex-direction: column;
     height: auto;
     padding: 20px;
+        align-items: center;
   }
 
   .feature-item-left {
     width: 100%;
-    height: 250px;
+    height: 350px;
     padding: 0 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   .feature-item-right {
