--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -262,10 +262,11 @@
   text-align: center;
 }
 .featurecontainer{
-  width:100% ;
+  width:101% ;
   overflow-x: hidden;
   overflow-y: auto;
  margin-left: -1% ;
+ margin-right: -1%;
 }
 
 .features {
@@ -274,7 +275,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  width: 101%;
+  width: 103%;
 
 }
 
@@ -330,7 +331,7 @@
 }
 .mobile{
   position: relative;
-  left: 10%;
+  
  
 }
   .feature-item {
