--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -196,8 +196,8 @@
   scroll-snap-type: y mandatory;
   scroll-behavior: smooth;
   &-vertical {
-    @apply flex-col overflow-y-scroll;
-    scroll-snap-type: y mandatory;
+    @apply flex overflow-y-scroll;
+    scroll-snap-type: mandatory; /* y mandatory  */
   }
   &-item {
     @apply box-content flex flex-none;
@@ -213,6 +213,40 @@
     scroll-snap-align: end;
   }
 }
+/*  CSS for the mobile carousel
+.carousel {
+  width: 100vw; 
+  overflow-y: scroll; 
+  scroll-snap-type: y mandatory;
+  scroll-behavior: smooth;
+}
+
+.carousel-vertical {
+  display: flex;
+  overflow-y: scroll; 
+  scroll-snap-type: y mandatory;
+}
+
+.carousel-item {
+  box-sizing: border-box; 
+  flex: none; 
+  width: 100%; 
+  height: 100vh; 
+  scroll-snap-align: start;
+}
+
+.carousel-start .carousel-item {
+  scroll-snap-align: start;
+}
+
+.carousel-center .carousel-item {
+  scroll-snap-align: center;
+}
+
+.carousel-end .carousel-item {
+  scroll-snap-align: end;
+} */
+
 /* css for about us */
 /* :root {
     --tanText : #434343;
